<resources>
    <!-- Application name -->
    <string name="app_name">Inventory App</string>

    <!-- Label for editor menu option to save product and leave details screen [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for details  menu option that deletes the current product and leave details screen [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Title text for the empty view, which describes the empty database -->
    <string name="empty_view_title_text">Your database is empty.</string>

    <!-- Subtitle text for the empty view that prompts the user to add products into database -->
    <string name="empty_view_subtitle_text">Get started by adding a product.</string>

    <!-- Text to be appended to quantity in main -->
    <string name="button_main_sale">Sale</string>

    <!-- Text to be appended to price in main and details -->
    <string name="price_append_dollars">$</string>

    <!-- Label for name category in the details [CHAR LIMIT=30] -->
    <string name="category_name">Name</string>

    <!-- Text hint for name field in the details [CHAR LIMIT=30] -->
    <string name="hint_product_name">Insert name</string>

    <!-- Label for quantity category in the details [CHAR LIMIT=30] -->
    <string name="category_quantity">Quantity</string>

    <!-- Text hint for quantity field in the details [CHAR LIMIT=30] -->
    <string name="hint_product_quantity">Insert quantity</string>

    <!-- Label for price category in the details [CHAR LIMIT=30] -->
    <string name="category_price">Price</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_price">Insert price</string>

    <!-- Text for increase quantity button [CHAR LIMIT=30] -->
    <string name="quantity_increase">Increase quantity</string>

    <!-- Text for decrease quantity button [CHAR LIMIT=30] -->
    <string name="quantity_decrease">Decrease quantity</string>

    <!-- Text for choosing image button [CHAR LIMIT=30] -->
    <string name="image_chooser">Choose picture</string>

    <!-- Text for sale button [CHAR LIMIT=30] -->
    <string name="button_sale">Sale</string>

    <!-- Text for shipment receive button [CHAR LIMIT=30] -->
    <string name="button_receive_shipment">Receive</string>

    <!-- Text for ordering button [CHAR LIMIT=30] -->
    <string name="button_order">Order</string>

    <!-- Title for the activity to add a new product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_product">Add Product</string>

    <!-- Title for the activity to edit an existing product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_product">Edit Product</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current product [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Dialog message to ask the user to confirm deleting the current product [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Toast when a product is inserted -->
    <string name="toast_insert">Product saved</string>

    <!-- Toast when a product insertion goes wrong -->
    <string name="toast_insert_error">Error saving the product</string>

    <!-- Toast when a product was updated -->
    <string name="toast_update">Product updated</string>

    <!-- Toast when a product updating goes wrong -->
    <string name="toast_update_error">Error updating the product</string>

    <!-- Toast message in editor when current product was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_successful">Product deleted</string>

    <!-- Toast message in editor when current product has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_failed">Error with deleting product</string>

    <!-- Message maximum image size -->
    <string name="maximum_image_size">Maximum size: 2MB</string>
</resources>
