<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.inventoryapp.DetailsActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin">

        <!-- Name category -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                android:text="@string/category_name"
                style="@style/CategoryStyle"/>

            <EditText
                android:id="@+id/edit_product_name"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />
        </LinearLayout>

        <!-- Quantity category -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                android:text="@string/category_quantity"
                style="@style/CategoryStyle"/>

            <EditText
                android:id="@+id/edit_product_quantity"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:hint="@string/hint_product_quantity"
                android:inputType="number"
                style="@style/EditorFieldStyle"/>
        </LinearLayout>

        <!-- Price category -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                android:text="@string/category_price"
                style="@style/CategoryStyle"/>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="2dp">

                <!-- Price field -->
                <EditText
                    android:id="@+id/edit_product_price"
                    android:hint="@string/hint_product_price"
                    android:inputType="number"
                    style="@style/EditorFieldStyle" />

                <!-- Units for price ($)     -->
                <TextView
                    android:id="@+id/label_weight_units"
                    android:text="@string/price_append_dollars"
                    style="@style/EditorUnitsStyle"/>
            </RelativeLayout>
        </LinearLayout>

        <!-- Increase/decrease quantity buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/activity_custom_margins"
            android:layout_marginBottom="@dimen/activity_custom_margins">

            <Button
                android:id="@+id/btnIncreaseQuantity"
                android:text="@string/quantity_increase"
                style="@style/EditorQuantityButtonsStyle"/>

            <Button
                android:id="@+id/btnDecreaseQuantity"
                android:text="@string/quantity_decrease"
                style="@style/EditorQuantityButtonsStyle"/>
        </LinearLayout>

        <!-- Quantity edit category -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_product_quantity_increase"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_marginLeft="@dimen/activity_margin"
                android:hint="@string/hint_product_quantity"
                android:inputType="number"
                style="@style/EditorFieldStyle"/>

            <EditText
                android:id="@+id/edit_product_quantity_decrease"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_marginLeft="@dimen/activity_margin"
                android:hint="@string/hint_product_quantity"
                android:inputType="number"
                style="@style/EditorFieldStyle"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/activity_custom_margins"
            android:layout_marginBottom="@dimen/activity_custom_margins">

            <Button
                android:id="@+id/btnGetPicture"
                android:text="@string/image_chooser"
                style="@style/EditorQuantityButtonsStyle"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/maximum_image_size"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/edit_product_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_custom_height"
            android:maxHeight="@dimen/activity_custom_height"
            android:layout_marginTop="@dimen/activity_margin"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/activity_custom_margins"
                android:layout_marginBottom="@dimen/activity_custom_margins"
                android:layout_alignParentBottom="true">

                <Button
                    android:id="@+id/btnSale"
                    android:text="@string/button_sale"
                    style="@style/EditorQuantityButtonsStyle"/>

                <Button
                    android:id="@+id/btnOrder"
                    android:text="@string/button_order"
                    style="@style/EditorQuantityButtonsStyle"/>
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/activity_custom_margins"
            android:layout_marginBottom="@dimen/activity_custom_margins"
            android:layout_alignParentBottom="true">


            <Button
                android:id="@+id/btnReceiveShipment"
                android:text="@string/button_receive_shipment"
                style="@style/EditorQuantityButtonsStyle"/>

            <EditText
                android:id="@+id/edit_product_quantity_receive"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/activity_margin"
                android:hint="@string/hint_product_quantity"
                android:inputType="number"
                style="@style/EditorFieldStyle"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
